--- a/src/components/Search/ItemsList.module.css
+++ b/src/components/Search/ItemsList.module.css
@@ -3,10 +3,17 @@
     border: 1px solid black;
     position: absolute;
     width: 175px;
-    
-    
 }
+
+
+
+.item{
+    padding: 5px;
+}
+
+
 
 .item:hover{
     background-color:rgb(218, 216, 216) ;
+    
 }
