--- a/src/components/Categories/CategorieContent.module.css
+++ b/src/components/Categories/CategorieContent.module.css
@@ -1,25 +1,12 @@
 .card {
-    padding: 1rem;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.5);
     border-radius: 14px;
     background-color: white;
-    height: 300px;
-    margin: 5px;
-    width: 15%;
   }
-  .card img{
-    width: 100px;
-    height: 100px;
-  }
-
+  
   .description{
     text-align: initial;
     font-size: medium;
-  }
-
-  .card h2{
-    margin-top: 5px;
-    margin-bottom: 0px;
   }
 
   .price_control{
@@ -33,5 +20,15 @@
   .card a{
     text-decoration: none;
     color: black;
+  }
+
+  .price{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .price p{
+    margin-bottom: 0;
   }
   
