--- a/src/components/UI/CategorieCard.module.css
+++ b/src/components/UI/CategorieCard.module.css
@@ -1,23 +1,19 @@
+
 .card {
-    padding: 1rem;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
-    border-radius: 14px;
-    background-color: white;
-    height: 230px;
-    margin: 25px;
-    
-  }
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+  border-radius: 14px;
+  height: 230px;
+  margin: 25px;
+}
 
-  .card a{
-    text-decoration: none;
-    color: black;
-  }
-
-  .card h1{
-    margin-top: 5px;
-  }
-  .card img{
-    width: 200px;
-    height: 150px;
-  }
-  
+.title {
+  margin-top: 15px;
+}
+.container a {
+  text-decoration: none;
+  color: black;
+}
+.card img {
+  width: 200px;
+  height: 150px;
+}
