--- a/src/components/UI/CategorieCard.module.css
+++ b/src/components/UI/CategorieCard.module.css
@@ -1,4 +1,3 @@
-
 .card {
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
   border-radius: 14px;
@@ -6,7 +5,16 @@
   margin: 25px;
   transition: transform 0.2s ease-in-out;
   transform: scale(1);
+}
 
+.lightBackground {
+  background-color: white;
+  color: #121212;
+}
+
+.darkBackground {
+  background-color: #333333;
+  color: #ffffff;
 }
 
 .card:hover {
