--- a/src/components/Cart/CartItem.module.css
+++ b/src/components/Cart/CartItem.module.css
@@ -9,7 +9,6 @@
   
   .cart-item h2 {
     margin: 0 0 0.5rem 0;
-    color: #363636;
   }
   
   .summary {
@@ -29,7 +28,6 @@
     border: 1px solid #ccc;
     padding: 0.25rem 0.75rem;
     border-radius: 6px;
-    color: #363636;
   }
   
   .actions {
@@ -62,4 +60,24 @@
   .cart-item button:active {
     background-color: #8a2b06;
     color: white;
+  }
+
+  .lightBackground {
+    background-color: white;
+    color: #121212;
+  }
+  
+  .darkBackground {
+    background-color: #333333;
+    color: #ffffff;
+  }
+  
+  .darkBtn{
+  background-color: #121212;
+  color: #ffffff;
+  }
+  
+  .lightBtn{
+    background-color:#3182ce ;
+    color: #ffffff;
   }
